# abo-enterprise

./: .gitignore  AIOS.md  AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  README.md  index.html  render.yaml  vercel.json
aegis_ai_x/: .env.example  .gitattributes  .gitignore  Makefile  README.md  SUMONIX_AI_AUDIT_REPORT_BN.md  alembic.ini  docker-compose.yml  pyproject.toml
aegis_ai_x/.github/workflows/: cd.yml  ci.yml  security.yml
aegis_ai_x/database/: session.py
aegis_ai_x/database/models/: __init__.py  mongo_schemas.py  postgres_models.py
aegis_ai_x/docs/api/: openapi-overview.md
aegis_ai_x/docs/architecture/: overview.md
aegis_ai_x/docs/deployment/: quickstart.md
aegis_ai_x/frontend/dashboard/: Dockerfile  package.json  tailwind.config.js  tsconfig.json
aegis_ai_x/infrastructure/docker-compose/: development.yml  production.yml  staging.yml
aegis_ai_x/libs/: config.py
aegis_ai_x/libs/llm/: __init__.py  cache.py  router.py
aegis_ai_x/libs/monitoring/: __init__.py  logger.py  prometheus.py  tracer.py
aegis_ai_x/libs/security/: __init__.py  compliance.py  scanner.py  secrets.py
aegis_ai_x/libs/vector_db/: __init__.py  embeddings.py  qdrant_client.py  retriever.py
aegis_ai_x/scripts/deployment/: deploy.ps1  deploy.sh
aegis_ai_x/scripts/migration/: run_migrations.ps1  run_migrations.sh
aegis_ai_x/scripts/setup/: init.ps1  init.sh
aegis_ai_x/services/agents/: Dockerfile  base_agent.py  main.py
aegis_ai_x/services/analytics/: Dockerfile  main.py  metrics.py  reports.py
aegis_ai_x/services/api-gateway/: Dockerfile
aegis_ai_x/tests/: conftest.py
(+608 files in other folders)
